--- a/index.html
+++ b/index.html
@@ -1,110 +1,261 @@
-function editNav() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Reservation</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="stylesheet" href="modal.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=DM+Sans"
+      rel="stylesheet"
+    />
+  </head>
 
-// DOM Elements
-const modalbg = document.querySelector(".bground");
-const modalBtn = document.querySelectorAll(".modal-btn");
-const formData = document.querySelectorAll(".formData");
-const closeBtn = document.querySelectorAll(".close");
-const submitBtn = document.querySelectorAll(".btn-submit");
-// confirmation message
-const confirmMsg = document.querySelector("#confirmationMsg");
-const closeConfirmBtn = document.querySelectorAll(".btn-close");
+  <body>
+    <header>
+      <!-- Navigation Bar -->
+      <nav class="topnav" id="myTopnav">
+        <div class="header-logo">
+          <img alt="logo" src="images/Logo.png" width="auto" height="auto" />
+        </div>
+        <div class="main-navbar">
+          <a href="#" class="active"><span>Accueil</span></a>
+          <a href="#"><span>Détails de l'évènement</span></a>
+          <a href="#"><span>À propos</span></a>
+          <a href="#"><span>Contact</span></a>
+          <a href="#"><span>Évènements passés</span></a>
+          <a href="javascript:void(0);" class="icon" onclick="editNav()">
+            <i class="fa fa-bars"></i>
+          </a>
+        </div>
+      </nav>
+    </header>
 
-// launch modal event
-modalBtn.forEach((btn) => btn.addEventListener("click", launchModal));
+    <main>
+      <!-- Main Section -->
+      <div class="hero-section">
+        <div class="hero-content">
+          <h1 class="hero-headline">
+            Marathon national<br />
+            de jeux vidéos
+          </h1>
+          <p class="hero-text">
+            Vous aimez jouer ? Notre prochain évènement gaming est ouvert aux
+            réservations... Places limitées !
+          </p>
+          <button class="btn-signup modal-btn">Je m'inscris</button>
+        </div>
+        <div class="hero-img">
+          <img src="images/bg_img.jpg" alt="img" />
+        </div>
+        <button class="btn-signup modal-btn">Je m'inscris</button>
+      </div>
 
-// launch modal form
-function launchModal() {
-  // display form
-  modalbg.style.display = "block";
-  // don't display confirmation message
-  confirmMsg.style.display = "none";
-  // re-display form
-  form.style.display = "";
-}
+      <!-- Modal Section -->
+      <div class="bground">
+        <div class="content">
+          <span class="close"></span>
+          <div class="modal-body">
+            <form
+              id="myForm"
+              name="reserve"
+              action="index.html"
+              method="get"
+              onsubmit="return validate();"
+            >
+              <div class="formData">
+                <label for="first">Prénom</label><br />
+                <input
+                  class="text-control"
+                  type="text"
+                  id="first"
+                  name="first"
+                  minlength="2"
+                /><br />
+                <div id="firstError" class="error hidden">
+                  Entrez un minimum de 2 caractères.
+                </div>
+              </div>
+              <div class="formData">
+                <label for="last">Nom</label><br />
+                <input
+                  class="text-control"
+                  type="text"
+                  id="last"
+                  name="last"
+                  minlength="2"
+                /><br />
+                <div id="lastError" class="error hidden">
+                  Entrez un minimum de 2 caractères.
+                </div>
+              </div>
+              <div class="formData">
+                <label for="email">E-mail</label><br />
+                <input
+                  class="text-control"
+                  type="email"
+                  id="email"
+                  name="email"
+                /><br />
+                <div id="emailError" class="error hidden">
+                  Entrez une adresse email valide.
+                </div>
+              </div>
+              <div class="formData">
+                <label for="birthdate">Date de naissance</label><br />
+                <input
+                  class="text-control"
+                  type="date"
+                  id="birthdate"
+                  name="birthdate"
+                /><br />
+                <div id="birthdateError" class="error hidden">
+                  Entrez une date valide.
+                </div>
+              </div>
+              <div class="formData">
+                <label for="quantity"
+                  >À combien de tournois GameOn avez-vous déjà participé
+                  ?</label
+                ><br />
+                <input
+                  type="number"
+                  class="text-control"
+                  id="quantity"
+                  name="quantity"
+                  min="0"
+                  max="99"
+                  step="1"
+                />
+                <div id="quantityError" class="error hidden">
+                  Entrez une valeur numérique.
+                </div>
+              </div>
+              <p class="text-label">
+                A quel tournoi souhaitez-vous participer cette année ?
+              </p>
+              <div class="formData">
+                <input
+                  class="checkbox-input"
+                  type="radio"
+                  id="location1"
+                  name="location"
+                  value="New York"
+                />
+                <label class="checkbox-label" for="location1">
+                  <span class="checkbox-icon"></span>
+                  New York</label
+                >
+                <input
+                  class="checkbox-input"
+                  type="radio"
+                  id="location2"
+                  name="location"
+                  value="San Francisco"
+                />
+                <label class="checkbox-label" for="location2">
+                  <span class="checkbox-icon"></span>
+                  San Francisco</label
+                >
+                <input
+                  class="checkbox-input"
+                  type="radio"
+                  id="location3"
+                  name="location"
+                  value="Seattle"
+                />
+                <label class="checkbox-label" for="location3">
+                  <span class="checkbox-icon"></span>
+                  Seattle</label
+                >
+                <input
+                  class="checkbox-input"
+                  type="radio"
+                  id="location4"
+                  name="location"
+                  value="Chicago"
+                />
+                <label class="checkbox-label" for="location4">
+                  <span class="checkbox-icon"></span>
+                  Chicago</label
+                >
+                <input
+                  class="checkbox-input"
+                  type="radio"
+                  id="location5"
+                  name="location"
+                  value="Boston"
+                />
+                <label class="checkbox-label" for="location5">
+                  <span class="checkbox-icon"></span>
+                  Boston</label
+                >
+                <input
+                  class="checkbox-input"
+                  type="radio"
+                  id="location6"
+                  name="location"
+                  value="Portland"
+                />
+                <label class="checkbox-label" for="location6">
+                  <span class="checkbox-icon"></span>
+                  Portland</label
+                >
+              </div>
+              <div id="locationError" class="error hidden">
+                Sélectionnez une ville.
+              </div>
+              <br />
+              <div class="formData">
+                <input
+                  class="checkbox-input"
+                  type="checkbox"
+                  id="checkbox1"
+                  name="conditions"
+                  checked
+                />
+                <label class="checkbox2-label" for="checkbox1">
+                  <span class="checkbox-icon"></span>
+                  J'ai lu et accepté les conditions d'utilisation.
+                </label>
+                <div id="conditionsError" class="error hidden">
+                  Cochez la case pour accepter les conditions.
+                </div>
+                <br />
+                <input class="checkbox-input" type="checkbox" id="checkbox2" />
+                <label class="checkbox2-label" for="checkbox2">
+                  <span class="checkbox-icon"></span>
+                  Je souhaite être prévenu des prochains évènements.
+                </label>
+                <br />
+              </div>
+              <input
+                class="btn-submit button"
+                type="submit"
+                value="C'est parti"
+              />
+            </form>
+            <div id="confirmationMsg">
+              <p>
+                Merci pour <br />
+                votre inscription
+              </p>
+              <br />
+              <button class="btn-close">Fermer</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
-// close modal event
-closeBtn.forEach((btn) => btn.addEventListener("click", closeModal));
-closeConfirmBtn.forEach((btn) => btn.addEventListener("click", closeModal));
+    <footer>
+      <p class="copyrights">Copyright 2014 - 2022, GameOn Inc.</p>
+    </footer>
 
-// close modal form
-function closeModal() {
-  modalbg.style.display = "none";
-}
-
-// form elements
-const form = document.getElementById("myForm");
-const first = document.getElementById("first");
-const last = document.getElementById("last");
-const email = document.getElementById("email");
-const birthdate = document.getElementById("birthdate");
-const quantity = document.getElementById("quantity");
-const city = document.getElementsByName("location");
-
-// form validation
-function validate() {
-  document.getElementById("firstError").classList.add("hidden");
-  document.getElementById("lastError").classList.add("hidden");
-  document.getElementById("emailError").classList.add("hidden");
-  document.getElementById("birthdateError").classList.add("hidden");
-  document.getElementById("quantityError").classList.add("hidden");
-  document.getElementById("locationError").classList.add("hidden");
-  document.getElementById("conditionsError").classList.add("hidden");
-
-  let isFormValid = true;
-
-  // if a field is not valid, display error message underneath
-  if (form.first.value.trim().length < 2) {
-    document.getElementById("firstError").classList.remove("hidden");
-    isFormValid = false;
-  }
-
-  if (form.last.value.trim().length < 2) {
-    document.getElementById("lastError").classList.remove("hidden");
-    isFormValid = false;
-  }
-
-  if (form.email.value.trim() == "") {
-    document.getElementById("emailError").classList.remove("hidden");
-    isFormValid = false;
-  }
-
-  if (form.birthdate.value.trim() == "") {
-    document.getElementById("birthdateError").classList.remove("hidden");
-    isFormValid = false;
-  }
-
-  if (form.quantity.value == "") {
-    document.getElementById("quantityError").classList.remove("hidden");
-    isFormValid = false;
-  }
-
-  if (form.location.value == "") {
-    document.getElementById("locationError").classList.remove("hidden");
-    isFormValid = false;
-  }
-
-  if (form.conditions.checked == "") {
-    document.getElementById("conditionsError").classList.remove("hidden");
-    isFormValid = false;
-  }
-
-  // if form is valid, do this
-  if (isFormValid == true) {
-    // form not displayed
-    form.style.display = "none";
-    // display confirmaion message
-    confirmMsg.style.display = "block";
-    // reset form to initial state
-    form.reset();
-  }
-
-  return false;
-}
+    <script src="modal.js"></script>
+  </body>
+</html>
